<resources>
    <string name="app_name">Photo Compare</string>
    <string name="app_name_with_version">Photo Compare - %s</string>
    <string name="permissions_title">Need storage permission</string>
    <string name="permissions_explanation">This app is useless without the permission to read your images, and to cache bitmaps on the internal storage.</string>
    <string name="action_select_imagepool">Select folder or image date</string>
    <string name="title_date_select">Select by date</string>
    <string name="hint_date_select">Images taken on …</string>
    <string name="action_loading_images">Loading images …</string>
    <string name="action_select_image">Select image(s) to start compare</string>
    <string name="action_compare_images">Compare</string>
    <string name="action_nav_right">Navigate right</string>
    <string name="action_nav_left">Navigate left</string>

    <string name="sync_state">Sync zoom and pan</string>
    <string name="confirm_selection">Image was added to selection</string>
    <string name="show_selection">Show selection …</string>
    <string name="checkbox_dark">Dark checkboxes</string>
    <string name="show_newest_first">Show newest first</string>
    <string name="use_filenames_for_sort">Sort using filenames</string>
    <string name="show_exif">Show EXIF</string>
    <string name="selected_image_content">Selected image</string>
    <string name="current_selection">Image selection</string>
    <string name="invert_selection">Invert selection</string>
    <string name="remove_from_selection">Refresh</string>
    <string name="delete_unselected">Delete all others</string>
    <string name="delete_selected">Delete selected images</string>
    <string name="delete_confirmation_title">Confirm image delete</string>
    <string name="delete_confirmation_folder">This action will delete %1$d file(s) in the folder %2$s.</string>
    <string name="delete_confirmation_date">This action will delete %1$d file(s) taken on %2$s.</string>
    <string name="nothing_to_delete_title">Nothing to delete</string>
    <string name="nothing_to_delete">There are no images to delete.</string>
    <string name="nothing_deleted">Delete was cancelled</string>

    <string name="shareselected_largetx_confirmation">Attempting to share %1$d file(s), which is rather a lot and might cause Android to crash this app. Do you still want to try?</string>
    <string name="shareselected_largetx_confirmation_title">Sharing a lot of images!</string>
    <string name="share_images_intent">Share images to …</string>
    <string name="navigation_will_lose_selection_title">Discard selection?</string>
    <string name="navigation_will_lose_selection">Image selection for the current group will be lost. Do you want to proceed to folder selection?</string>

    <string name="channel_filedelete_name">File deletes</string>
    <string name="channel_filedelete_description">Show progress of deleting unwanted files</string>
    <string name="channel_filedelete_title">Deleting unwanted images</string>
    <string name="submit_date_selection">Submit date selection</string>
    <string name="share_images">Share images</string>
    <string name="update_media_access">Manage</string>
    <string name="media_access_disclaimer">You\'ve granted selective access to your media. This can be changed here.</string>
    <string name="delete_unselected_dcim_message">This folder seems to be the main camera folder, for which \"delete others\" is not allowed.</string>
    <string name="delete_unselected_dcim_title">Action not allowed</string>
</resources>
