<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/removeUnselected"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/remove_from_selection"
        app:showAsAction="never" />
    <item
        android:id="@+id/invertSelection"
        android:icon="@drawable/ic_shuffle_black_24dp"
        android:title="@string/invert_selection"
        app:showAsAction="never" />
    <item
        android:id="@+id/deleteUnselected"
        android:icon="@drawable/ic_delete_sweep_black_24dp"
        android:title="@string/delete_unselected"
        app:showAsAction="never" />
    <item
        android:id="@+id/deleteSelected"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_selected"
        app:showAsAction="never" />


</menu>